grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-redirectscheme@kubernetescrd
  labels:
    app: grafana
spec:
  rules:
    - host: grafana.celestium.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-https
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: ca-issuer
  labels:
    app: grafana
spec:
  rules:
    - host: grafana.celestium.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana 
                port:
                  number: 80 
  tls:
    - hosts:
        - grafana.celestium.life
      secretName: grafana-cert
